--- a/BittleOptions/src/org/bittle/beansmod/BittleTreeTopComponent.form
+++ b/BittleOptions/src/org/bittle/beansmod/BittleTreeTopComponent.form
@@ -116,17 +116,11 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="FlipGuy" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="NotLoggedInMessage" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="ToOptionsButton" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="FlipGuy" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="NotLoggedInMessage" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="ToOptionsButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
